ubiquity (2.5.7) UNRELEASED; urgency=low

  * Set the accessible name of every widget.

 -- Evan Dandrea <evand@ubuntu.com>  Sun, 26 Dec 2010 16:30:54 +0000

ubiquity (2.5.6) natty; urgency=low

  [ Colin Watson ]
  * Recommend btrfs-tools (LP: #674805).
  * Sync network configuration with netcfg: drop ip6-allhosts (see Debian
    #533384); strip trailing dots from the hostname and leading and trailing
    dots from the domain.
  * Automatic update of included source packages: grub-installer
    1.57ubuntu2, netcfg 1.57ubuntu3, partman-auto 93ubuntu3, partman-target
    71ubuntu1, user-setup 1.28ubuntu12.

  [ Mario Limonciello ]
  * If available, copy GRUB translations in oem-config user mode.
    (LP: #686789)

  [ Evan Dandrea ]
  * Add debconf template for password confirmation (LP: #654491).
  * Translate the 'passwords do not match' string (LP: #686737).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 17 Dec 2010 15:02:18 +0000

ubiquity (2.5.5) natty; urgency=low

  * Ensure that /var/lib/ubiquity exists in scripts/plugininstall.py.
  * Automatic update of included source packages: partman-auto 93ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 02 Dec 2010 17:00:29 +0000

ubiquity (2.5.4) natty; urgency=low

  * ubiquity/frontend/kde_components/PartAuto.py fix namespace on QWidget
    LP: #684059

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 02 Dec 2010 12:50:08 +0000

ubiquity (2.5.3) natty; urgency=low

  * Automatic update of included source packages: apt-setup 1:0.49ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Dec 2010 17:20:02 +0000

ubiquity (2.5.2) natty; urgency=low

  [ Julien Lavergne ]
  * debian/ubiquity.ubiquity.upstart, debian/oem-config.oem-config.upstart:
    - Add lxdm support.
  * Add support for openbox-lubuntu and lxsession for ubiquity-dm (LP: #546445)

  [ Colin Watson ]
  * Automatic update of included source packages: apt-setup 1:0.49ubuntu2,
    user-setup 1.28ubuntu11.
