@@ -5,7 +5,6 @@ tailor.state.journal
 ./build-stamp
 debian/build
 debian/files
-debian/kbdnames.gz
 debian/oem-config
 debian/oem-config-check
 debian/oem-config-debconf
