@@ -46,7 +46,6 @@ d-i/source/clock-setup/set-date-epoch sbin
 # console-setup
 compat/locale usr/lib/ubiquity/console-setup
 scripts/console-setup-apply usr/lib/ubiquity
-debian/kbdnames.gz usr/share/console-setup-mini
 d-i/source/console-setup/Keyboard/pc105.tree usr/lib/ubiquity/console-setup
 
 # debian-installer-utils
